# wire

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: ai_client.py  api.py  cli.py  config.py  crawler.py  discover.py  search_index.py  state_db.py  telegram_client.py
static/: index.html
tests/: test_api.py  test_discover.py
