[project]
name = "wire"
version = "0.1.0"
description = "Search engine for public Telegram channels and groups"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "meilisearch>=0.31",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
